<resources>
    <string name="app_name">DomoMeteo</string>

    // ConfigurationActivity
    <string name="server_adress">Server address</string>
    <string name="port">Port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="emptyFields">Empty Fields</string>
    <string name="save">Save</string>
    <string name="validIP">No valid ip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
